# brutefir

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  Makefile  README  bfio_alsa.c  bfio_file.c  bfio_jack.c  bflogic_cli.c  bflogic_eq.c  bfrun.c  brutefir.c  brutefir.html  convolver_xmm.c  dai.c  delay.c  emalloc.c  fftw_convolver.c  raw2real.h  real2raw.h  shmalloc.c  timestamp.h
